--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -15,12 +15,33 @@
   },
   "header": {
     "nav": {
-      "home": "Главная",
+      "feed": "@:feed.title",
       "search": "@:search.title",
       "compose": "Написать",
       "notifications": "@:notifications.title",
       "menu": "@:menu.title",
       "auth": "Авторизация"
+    }
+  },
+  "home": {
+    "title": "Добро пожаловать",
+    "hero": {
+      "title": "Знакомьтесь, <span>Футубра!</span>",
+      "description": "Как-то несправедливо, что все социальные сети России в руках одного человека, вы не находите?"
+    },
+    "teasers": {
+      "item": {
+        "recommendations": { "title": "Никаких рекомендаций", "info": "Новостная лента содержит только то, на что ты подписался и без рекомендаций добавить бывшую и ее нового парня в друзья" }, 
+        "combine": { "title": "Никаких лишних функций", "info": "Ищешь доставку, гороскоп, прогноз погоды, музыку и маркетплейс? Ошибся вкладкой, приятель" },
+        "friends": { "title": "Никаких друзей", "info": "Только подписки на контент пользователя что интересен тебе" },
+        "likes": { "title": "Никаких лайков", "info": "Мы же не хотим видеть посты с котятами на постоянке ради набора рейтинга?" },
+        "blacklist": { "title": "Никаких черных списков", "info": "Тебе не нравится что пишет другой человек?  Не читай его, это не сложно" },
+        "ads": { "title": "Никаких брендов", "info": "Лично мне хватает их рекламы в интернете и в почтовом ящике" }
+      }
+    },
+    "action": {
+      "login": "Войти",
+      "create_account": "@:auth.create_account.title"
     }
   },
   "feed": {
@@ -37,30 +58,23 @@
   "user": {
     "title": "Профиль",
     "tabs": {
-      "entries": "Нет постов | {n} пост | {n} поста | {n} постов",
-      "subscribers": "Нет подписчиков | {n} подписчик | {n} подписчика | {n} подписчиков",
-      "subscriptions": "Нет подписок | {n} подписка | {n} подписки | {n} подписок",
-      "tags": "Нет хештегов | {n} хештег | {n} хештега | {n} хештегов"
+      "entries": "Без постов | {n} пост | {n} поста | {n} постов",
+      "subscribers": "Без подписчиков | {n} подписчик | {n} подписчика | {n} подписчиков",
+      "subscriptions": "Без подписок | {n} подписка | {n} подписки | {n} подписок",
+      "badges": "Без значков | {n} значок | {n} значка | {n} значков"
     },
     "meta": {
-      "from_date": "На проекте с {date}",
-      "badges": "Нет значков | {n} значок | {n} значка | {n} значков",
-      "links": "Нет ссылок | {n} ссылка | {n} ссылки | {n} ссылок"
+      "from_date": "На проекте с {date}"
     },
     "errors": {
       "entries_empty": "Постов пока-что нет",
       "subscribers_empty": "Подписчиков пока-что нет",
       "subscriptions_empty": "Подписок пока-что нет",
-      "badges_empty": "Значков пока-что нет",
-      "tags_empty": "Хештегов пока-что нет",
-      "links_empty": "Ссылок пока-что нет"
+      "badges_empty": "Значков пока-что нет"
     },
     "action": {
       "settings": "Изменить профиль",
       "logout": "Выйти",
-      "options": "Еще",
-      "subscribe": "Подписаться",
-      "unsubscribe": "Отписаться",
       "notify_new_posts": "Уведомлять о новых постах",
       "dont_notify_new_posts": "Не уведомлять о новых постах"
     }
@@ -295,8 +309,11 @@
     "title": "Запись",
     "meta": {
       "comments": "0 ответов | {n} ответ | {n} ответа | {n} ответов",
+      "stars": "0 звезд | {n} звезда | {n} звезды | {n} звезд",
+      "bookmarks": "0 закладок | {n} закладка | {n} закладки | {n} закладок",
       "edited": "ред",
-      "pinned": "Закреплен"
+      "pinned": "Закреплен",
+      "hidden_from_feed": "Скрыт из ленты"
     },
     "history": {
       "edit-content": "Изменено содержимое"
@@ -304,7 +321,9 @@
     "pseudo-form": {
       "placeholder": "Напишите что-нибудь...",
       "comments-on": "Комментарии включены",
-      "comments-off": "Комментарии выключены"
+      "comments-off": "Комментарии выключены",
+      "hidden_from_feed-on": "Будет скрыт из ленты",
+      "hidden_from_feed-off": "Будет показан в ленте"
     },
     "errors": {
       "empty": "Пусто",
@@ -335,14 +354,12 @@
     "action": {}
   },
   "community": {
-    "action": {
-      "subscribe": "Подписаться",
-      "unsubscribe": "Отписаться",
-      "options": "Еще"
-    },
+    "title": "Сообщество",
+    "action": {},
     "meta": {
       "subscribers": "Нет подписчиков | {n} подписчик | {n} подписчика | {n} подписчиков",
-      "official": "Официальный"
+      "official": "Официальный",
+      "from_date":"Существует с {date}"
     }
   },
   "auth": {
@@ -413,7 +430,7 @@
       "description": "Возможно вам показалось что такой тег существует"
     },
     "user_not_found": {
-      "icon": "user-unfollow-line",
+      "icon": "user-line",
       "title": "Пользователь не найден",
       "description": "Попробуйте поискать других, существующих, пользователей"
     },
@@ -443,7 +460,7 @@
       "description": "Как только он подтвердит почту - появится тут"
     },
     "entry_not_found": {
-      "icon": "user-unfollow-line",
+      "icon": "ghost-line",
       "title": "Запись не найдена",
       "description": "Вероятнее всего, ее тут никогда и небыло. Но кто знает наверняка, правда?"
     },
@@ -453,7 +470,7 @@
       "description": "Да, и такое бывает в нашей обители свободы слова"
     },
     "bad_request": {
-      "icon": "user-line",
+      "icon": "cloud-off-line",
       "title": "Плохой запрос",
       "description": "Вероятнее всего, вы что-то сделали не так и сервер вас не понял"
     },
@@ -499,6 +516,9 @@
     }
   },
   "action": {
+    "options": "Еще",
+    "subscribe": "Подписаться",
+    "unsubscribe": "Отписаться",
     "apply": "Применить",
     "save": "Сохранить",
     "go_away": "Перейти",
@@ -512,7 +532,6 @@
     "edit": "Изменить",
     "delete": "Удалить",
     "refresh": "Обновить",
-    "options": "Опции",
     "attach_image": "Прикрепить изображение",
     "copy_link": "Скопировать ссылку",
     "report": "Пожаловаться",
