--- a/src/app/locales/pt.json
+++ b/src/app/locales/pt.json
@@ -15,7 +15,7 @@
   },
   "header": {
     "nav": {
-      "home": "Pagina inicial",
+      "feed": "@:feed.title",
       "search": "@:search.title",
       "compose": "Escrever",
       "notifications": "@:notifications.title",
@@ -40,20 +40,16 @@
       "entries": "Nenhumas entradas | {n} entrada | {n} entradas | {n} entradas",
       "subscribers": "Nenhum assinante | {n} assinante | {n} assinantes | {n} assinantes",
       "subscriptions": "Sem assinaturas | {n} assinatura | {n} assinaturas | {n} assinaturas",
-      "tags": "Sem hashtags | {n} hashtag | {n} hashtag | {n} hashtags"
+      "badges": "Sem ícones | {n} ícone | {n} ícone | {n} ícones"
     },
     "meta": {
-      "from_date": "Em um projeto com {date}",
-      "badges": "Sem ícones | {n} ícone | {n} ícone | {n} ícones",
-      "links": "Sem links | {n} link | {n} links | {n} links"
+      "from_date": "Em um projeto com {date}"
     },
     "errors": {
       "entries_empty": "Nenhum entrada ainda",
       "subscribers_empty": "Ainda não há inscritos",
       "subscriptions_empty": "Ainda não há assinaturas",
-      "badges_empty": "Ainda não há ícones",
-      "tags_empty": "Ainda não há hashtags",
-      "links_empty": "Ainda não há links"
+      "badges_empty": "Ainda não há ícones"
     },
     "action": {
       "settings": "Configurações de perfil",
@@ -288,7 +284,8 @@
     "meta": {
       "comments": "0 respostas | {n} resposta | {n} respostas | {n} respostas",
       "edited": "editar",
-      "pinned": "pinned"
+      "pinned": "Pinned",
+      "hidden_from_feed": "Hidden from feed"
     },
     "pseudo-form": {
       "placeholder": "Escreva algo..."
@@ -323,10 +320,12 @@
     "action": {}
   },
   "community": {
+    "title": "Comunidades",
     "action": {},
     "meta": {
       "subscribers": "Nenhum assinante | {n} assinante | {n} assinantes | {n} assinantes",
-      "official": "Official"
+      "official": "Official",
+      "from_date":"Existe desde {date}"
     }
   },
   "auth": {
@@ -397,7 +396,7 @@
       "description": "Você pode ter pensado que tal tag existe"
     },
     "user_not_found": {
-      "icon": "user-unfollow-line",
+      "icon": "user-line",
       "title": "O usuário não foi encontrado",
       "description": "Tente pesquisar outros usuários existentes"
     },
@@ -427,17 +426,17 @@
       "description": "Assim que ele confirmar seu e-mail, ele aparecerá aqui"
     },
     "entry_not_found": {
-      "icon": "user-unfollow-line",
+      "icon": "ghost-line",
       "title": "Registro não encontrado",
       "description": "Muito provavelmente, ela nunca esteve aqui. Mas quem sabe com certeza, a verdade?"
     },
     "entry_hidden": {
-      "icon": "user-unfollow-line",
+      "icon": "ghost-line",
       "title": "Postagem oculta",
       "description": "Sim, e isso acontece em nossa casa de liberdade de expressão."
     },
     "bad_request": {
-      "icon": "user-line",
+      "icon": "cloud-off-line",
       "title": "Pedido ruim",
       "description": "Provavelmente você fez algo errado e o servidor não entendeu você"
     },
