Последний коммит перед началом великого редизайна

--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -165,12 +165,16 @@
   "communities": {
     "title": "Сообщества",
     "tabs": {
-      "subscribed": "Все сообщества",
+      "subscribed": "Мои сообщества",
       "manage": "Управление"
     }
   },
   "feeds": {
-    "title": "Ленты"
+    "title": "Ленты",
+    "tabs": {
+      "subscribed": "Мои ленты",
+      "manage": "Управление"
+    }
   },
   "bookmarks": {
     "title": "Закладки",
@@ -247,6 +251,10 @@
     },
     "account": {
       "title": "Настройки аккаунта",
+      "email": {
+        "title": "Смена электронной почты",
+        "help": "Введите адрес электронной почты, с помощью которого вы будете получать доступ к аккаунту и получать уведомления безопасности"
+      },
       "verification": {
         "title": "Подтверждение аккаунта",
         "help": "Верификация — это процесс подтверждения того, что профиль действительно принадлежит известной персоне"
@@ -267,6 +275,7 @@
     "field": {
       "name": "Имя",
       "bio": "Описание",
+      "email": "Электронная почта",
       "sex": "Пол",
       "current_password": "Текущий пароль",
       "new_password": "Новый пароль",
